// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies styles and props when disabled=true 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  disabled={true}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#d8d8d8",
        "borderRadius": 4,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#2cda9d",
      },
      Object {
        "backgroundColor": "#cecece",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    markdown={false}
    onLayout={[Function]}
    style={
      Array [
        Object {
          "color": "#ffffff",
        },
        Object {
          "color": "#2d2f7f",
        },
        Object {
          "color": "#585858",
        },
      ]
    }
    type="h2"
  >
    a button
  </Text>
</Touchable>
`;

exports[`renders correctly 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#d8d8d8",
        "borderRadius": 4,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#2cda9d",
      },
      Object {},
    ]
  }
>
  <Text
    allowFontScaling={true}
    markdown={false}
    onLayout={[Function]}
    style={
      Array [
        Object {
          "color": "#ffffff",
        },
        Object {
          "color": "#2d2f7f",
        },
        Object {},
      ]
    }
    type="h2"
  >
    a button
  </Text>
</Touchable>
`;
